Date.prototype.toJSON throws if toISOString returns an object https://bugs.webkit.org/show_bug.cgi?id=198495

Patch by Alexey Shvayka <shvaikalesh@gmail.com> on 2019-08-19
Reviewed by Ross Kirsling.

JSTests:

* test262/expectations.yaml: Mark 6 test cases as passing.

Source/JavaScriptCore:

Don't throw TypeError if result of toISOString call is not a primitive.
(step 4 of https://tc39.es/ecma262/#sec-date.prototype.tojson)

* runtime/DatePrototype.cpp:
(JSC::dateProtoFuncToJSON): Remove isObject check.

LayoutTests:

TypeError shouldn't be thrown if result of toISOString call is an object.
(step 4 of https://tc39.es/ecma262/#sec-date.prototype.tojson)

* js/dom/JSON-stringify-expected.txt:
* js/resources/JSON-stringify.js:

Canonical link: https://commits.webkit.org/214632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248876 268f45cc-cd09-0410-ab3c-d52691b4dbfc